<resources>
    <string name="app_name">R2D2 Sample App</string>
    <string name="storing_secrets">Storing Secrets</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypted_text">Encrypted Text</string>
    <string name="decrypted_text">Decrypted Text</string>
    <string name="data_encryption_toast">Your data has been encrypted.</string>
    <string name="data_decryption_toast">Your data has been decrypted.</string>
</resources>
